--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/LaunchScreen.storyboard
@@ -18,6 +18,7 @@
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KakaoTalk_Photo_2021-08-04-19-29-42" translatesAutoresizingMaskIntoConstraints="NO" id="J0M-Ae-SJn">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
+                                <color key="tintColor" red="0.38039215686274508" green="0.73725490196078436" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
