--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/LaunchScreen.storyboard
@@ -4,7 +4,6 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,13 +15,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KakaoTalk_Photo_2021-08-04-19-29-42" translatesAutoresizingMaskIntoConstraints="NO" id="J0M-Ae-SJn">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KakaoTalk_Photo_2021-09-03-00-30-22" translatesAutoresizingMaskIntoConstraints="NO" id="J0M-Ae-SJn">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
-                                <color key="tintColor" red="0.38039215686274508" green="0.73725490196078436" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" red="0.3803921938" green="0.73725497719999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="0.3803921938" green="0.73725497719999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="J0M-Ae-SJn" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="BcY-0R-SJJ"/>
                             <constraint firstItem="J0M-Ae-SJn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dbf-UD-KNs"/>
@@ -37,9 +36,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="KakaoTalk_Photo_2021-08-04-19-29-42" width="1148" height="1128"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <image name="KakaoTalk_Photo_2021-09-03-00-30-22" width="1108" height="2400"/>
     </resources>
 </document>
