--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/LaunchScreen.storyboard
@@ -15,18 +15,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="KakaoTalk_Photo_2021-09-03-00-30-22" translatesAutoresizingMaskIntoConstraints="NO" id="J0M-Ae-SJn">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="862"/>
-                                <color key="tintColor" red="0.3803921938" green="0.73725497719999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ㅇㅇㅇ" translatesAutoresizingMaskIntoConstraints="NO" id="B3g-fd-hSr">
+                                <rect key="frame" x="87" y="191" width="240" height="128"/>
                             </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" red="0.3803921938" green="0.73725497719999999" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.38039215686274508" green="0.73725490196078436" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="J0M-Ae-SJn" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="BcY-0R-SJJ"/>
-                            <constraint firstItem="J0M-Ae-SJn" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Dbf-UD-KNs"/>
-                            <constraint firstAttribute="trailing" secondItem="J0M-Ae-SJn" secondAttribute="trailing" id="ZUi-6U-yfa"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="J0M-Ae-SJn" secondAttribute="bottom" id="xfV-Bp-z5s"/>
+                            <constraint firstItem="B3g-fd-hSr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="87" id="9IQ-0H-k3V"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="B3g-fd-hSr" secondAttribute="bottom" constant="543" id="OvC-UP-iUN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="B3g-fd-hSr" secondAttribute="trailing" constant="87" id="XbC-mv-eOf"/>
+                            <constraint firstItem="B3g-fd-hSr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="147" id="gfv-it-Ge1"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -36,6 +35,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="KakaoTalk_Photo_2021-09-03-00-30-22" width="1108" height="2400"/>
+        <image name="ㅇㅇㅇ" width="630" height="336"/>
     </resources>
 </document>
