--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="nkh-u9-4Vs">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="rGN-zt-Ql9">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -225,7 +225,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Dzd-T9-anw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="vx8-vr-iRK" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="3671.0144927536235" y="-1022.5446428571428"/>
+            <point key="canvasLocation" x="2842" y="-1895"/>
         </scene>
         <!--Post View Controller-->
         <scene sceneID="Xff-dh-P5h">
@@ -309,7 +309,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MDE-zB-bgR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="mA7-0c-2cT" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2779.7101449275365" y="-303.34821428571428"/>
+            <point key="canvasLocation" x="1951" y="-1176"/>
         </scene>
         <!--Post Table View Controller-->
         <scene sceneID="MG4-gp-EOW">
@@ -450,7 +450,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eJl-Yd-YAS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3671.0144927536235" y="-303.01339285714283"/>
+            <point key="canvasLocation" x="2842" y="-1176"/>
         </scene>
         <!--Select Categories Table View Controller-->
         <scene sceneID="8VR-Us-r5G">
@@ -488,7 +488,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WLk-z1-oRq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4416" y="-1023"/>
+            <point key="canvasLocation" x="3587" y="-1896"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="l4R-ax-3th">
@@ -505,7 +505,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="E7v-mG-LpY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2780" y="-1022"/>
+            <point key="canvasLocation" x="1951" y="-1895"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="BqH-Hu-8TP">
@@ -526,18 +526,18 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="30b-XE-OI7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="35" y="84"/>
+            <point key="canvasLocation" x="-3068" y="-437"/>
         </scene>
         <!--Log In View Controller-->
         <scene sceneID="xbh-uJ-giS">
             <objects>
-                <viewController id="gzs-Ha-SKa" customClass="LogInViewController" customModule="DormitoryForDelivery" sceneMemberID="viewController">
+                <viewController modalTransitionStyle="crossDissolve" modalPresentationStyle="fullScreen" id="gzs-Ha-SKa" customClass="LogInViewController" customModule="DormitoryForDelivery" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7oN-uj-wBT">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="7qd-uO-hjT">
-                                <rect key="frame" x="48" y="324" width="318" height="226"/>
+                                <rect key="frame" x="48" y="280" width="318" height="226"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="uBz-sV-tBo">
                                         <rect key="frame" x="0.0" y="0.0" width="318" height="128"/>
@@ -596,7 +596,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="배달의 기숙사" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zdm-K8-kmB">
-                                <rect key="frame" x="48" y="238" width="318" height="36"/>
+                                <rect key="frame" x="48" y="194" width="318" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <color key="textColor" red="0.67450982329999998" green="0.78431367870000002" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
@@ -617,12 +617,11 @@
                     <connections>
                         <outlet property="emailTextField" destination="ig3-Gt-HEK" id="0cD-lK-xOZ"/>
                         <outlet property="passwordTextField" destination="Hat-Vu-gwb" id="R0U-lC-OnD"/>
-                        <segue destination="rGN-zt-Ql9" kind="show" identifier="login" id="PRU-zo-vQu"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y8L-Wn-gWP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3358" y="84"/>
+            <point key="canvasLocation" x="1951" y="-437"/>
         </scene>
         <!--회원가입-->
         <scene sceneID="Mh6-dI-um7">
@@ -778,7 +777,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JlM-R3-P9y" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1888.4057971014495" y="575.89285714285711"/>
+            <point key="canvasLocation" x="3474" y="-437"/>
         </scene>
         <!--홈-->
         <scene sceneID="0Wa-Qt-cm0">
@@ -799,7 +798,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qRz-Er-FTu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="811.59420289855075" y="-604.01785714285711"/>
+            <point key="canvasLocation" x="-17" y="-1477"/>
         </scene>
         <!--창원대학교-->
         <scene sceneID="2WV-gW-y8M">
@@ -1223,11 +1222,12 @@
                         <outletCollection property="filterButtonCollection" destination="qbA-ve-XHq" collectionClass="NSMutableArray" id="lx9-2I-FpM"/>
                         <outletCollection property="filterButtonCollection" destination="Thv-Oj-Bhn" collectionClass="NSMutableArray" id="VlC-5h-cD4"/>
                         <segue destination="s6m-6S-5kq" kind="show" identifier="sendPostSegue" id="bEZ-Dz-c8p"/>
+                        <segue destination="gzs-Ha-SKa" kind="presentation" identifier="login" id="728-d2-gZt"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="an3-du-pz5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1766.6666666666667" y="-604.01785714285711"/>
+            <point key="canvasLocation" x="938" y="-1477"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="GYc-i7-kBW">
@@ -1246,7 +1246,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fva-FF-vwF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="812" y="1331"/>
+            <point key="canvasLocation" x="-7" y="1422"/>
         </scene>
         <!--더보기-->
         <scene sceneID="24h-z5-ZT6">
@@ -1661,13 +1661,13 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="Ebz-Nh-nme" kind="unwind" identifier="logOut" unwindAction="unwindToLogInViewControllerWithUnwindSegue:" id="mnM-mT-HZV"/>
+                        <segue destination="Ebz-Nh-nme" kind="unwind" identifier="logOut" unwindAction="unwindToMainViewControllerWithUnwindSegue:" id="mnM-mT-HZV"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nrD-V1-QrE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Ebz-Nh-nme" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="1604" y="1331"/>
+            <point key="canvasLocation" x="938" y="1422"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Qku-m5-ThN">
@@ -1685,25 +1685,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UY8-nc-euj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2575" y="576"/>
-        </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="EvN-ie-Hnd">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="nkh-u9-4Vs" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nJp-zj-d1l">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="gzs-Ha-SKa" kind="relationship" relationship="rootViewController" id="2pV-sh-Z8J"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="mRR-lD-k2I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-4052" y="84"/>
+            <point key="canvasLocation" x="2787" y="-437"/>
         </scene>
         <!--채팅방-->
         <scene sceneID="0rb-lw-GKW">
@@ -1806,7 +1788,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MsJ-dt-ROw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1963.7681159420292" y="397.76785714285711"/>
+            <point key="canvasLocation" x="739" y="576"/>
         </scene>
         <!--채팅-->
         <scene sceneID="pfv-CZ-yYu">
@@ -1825,7 +1807,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0xq-wP-Rax" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1220" y="398"/>
+            <point key="canvasLocation" x="-6" y="576"/>
         </scene>
         <!--Chat Room View Controller-->
         <scene sceneID="C4H-l3-Jv6">
@@ -1946,7 +1928,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="2780" y="398"/>
+            <point key="canvasLocation" x="1555" y="576"/>
         </scene>
     </scenes>
     <resources>
