--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -768,11 +768,11 @@
             <objects>
                 <viewController id="T6i-sk-wSO" customClass="EmailCertificationViewController" customModule="DormitoryForDelivery" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="mYW-RU-Hn0">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="PwB-T4-DqW">
-                                <rect key="frame" x="24" y="132.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="44.5" width="366" height="40"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="이메일" textAlignment="justified" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6AF-Kh-MMA">
                                         <rect key="frame" x="0.0" y="0.0" width="278" height="40"/>
@@ -804,14 +804,14 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lqe-YW-Qp1">
-                                <rect key="frame" x="30" y="108" width="31.5" height="14.5"/>
+                                <rect key="frame" x="30" y="20" width="31.5" height="14.5"/>
                                 <rect key="contentStretch" x="0.20000000000000001" y="0.0" width="1" height="1"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" red="0.44705885649999999" green="0.44705885649999999" blue="0.45098042490000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNQ-ja-uY8">
-                                <rect key="frame" x="24" y="202.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="114.5" width="366" height="40"/>
                                 <color key="backgroundColor" red="0.67450982329999998" green="0.78431367870000002" blue="0.89803922179999995" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="s7j-z3-7zL"/>
@@ -826,7 +826,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" ! 이메일 인증을 해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8B9-ZK-Rpb">
-                                <rect key="frame" x="24" y="174.5" width="131" height="16"/>
+                                <rect key="frame" x="24" y="86.5" width="131" height="16"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" systemColor="systemPinkColor"/>
                                 <nil key="highlightedColor"/>
@@ -1899,7 +1899,7 @@
                                 </constraints>
                             </view>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="IQb-QP-KQa">
-                                <rect key="frame" x="0.0" y="88" width="414" height="671"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="759"/>
                                 <color key="backgroundColor" red="0.71372550729999995" green="0.77647060160000003" blue="0.84313726430000002" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <gestureRecognizers/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RVL-Yw-wv4">
@@ -1991,7 +1991,7 @@
                             <constraint firstAttribute="trailing" secondItem="1vR-lA-4em" secondAttribute="trailing" id="gUG-n6-CoI"/>
                             <constraint firstAttribute="trailing" secondItem="IQb-QP-KQa" secondAttribute="trailing" id="gtt-U2-1Sh"/>
                             <constraint firstItem="1vR-lA-4em" firstAttribute="top" secondItem="IQb-QP-KQa" secondAttribute="bottom" id="wEI-UI-WeZ"/>
-                            <constraint firstItem="IQb-QP-KQa" firstAttribute="top" secondItem="INV-Sx-wKe" secondAttribute="top" id="zCe-pf-yuG"/>
+                            <constraint firstItem="IQb-QP-KQa" firstAttribute="top" secondItem="KPW-FO-CPc" secondAttribute="top" id="zCe-pf-yuG"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Fsn-jW-chg"/>
@@ -2013,7 +2013,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="8YM-W5-RIq"/>
+        <segue reference="Mdb-8C-QEP"/>
         <segue reference="vqh-P7-hEC"/>
     </inferredMetricsTieBreakers>
     <resources>
