--- a/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
+++ b/DormitoryForDelivery/DormitoryForDelivery/Views/storyboard/Base.lproj/Main.storyboard
@@ -1826,6 +1826,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="채팅방" id="ftG-Bj-j5T"/>
                     <connections>
+                        <outlet property="navigationBar" destination="ftG-Bj-j5T" id="i7I-hc-equ"/>
                         <segue destination="A2B-cd-b9I" kind="show" identifier="chatting" id="MFC-Vy-H5P"/>
                     </connections>
                 </tableViewController>
@@ -1960,7 +1961,7 @@
                                                             <rect key="frame" x="99" y="25" width="48" height="15"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -1994,7 +1995,9 @@
                             <constraint firstItem="IQb-QP-KQa" firstAttribute="top" secondItem="KPW-FO-CPc" secondAttribute="top" id="zCe-pf-yuG"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="Fsn-jW-chg"/>
+                    <navigationItem key="navigationItem" id="Fsn-jW-chg">
+                        <barButtonItem key="rightBarButtonItem" title="Item" image="line.horizontal.3" catalog="system" id="SVc-Gp-8nE"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="chatCollectionView" destination="IQb-QP-KQa" id="aGG-tE-YCH"/>
                         <outlet property="chatTextField" destination="cAJ-ne-quI" id="NTZ-tc-Z9Z"/>
@@ -2022,6 +2025,7 @@
         <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="house" catalog="system" width="128" height="106"/>
         <image name="house.fill" catalog="system" width="128" height="106"/>
+        <image name="line.horizontal.3" catalog="system" width="128" height="64"/>
         <image name="message" catalog="system" width="128" height="113"/>
         <image name="message.fill" catalog="system" width="128" height="113"/>
         <image name="plus.circle" catalog="system" width="128" height="121"/>
